fixed height of product for long description overflow hide

--- a/client/sass/_test.scss
+++ b/client/sass/_test.scss
@@ -66,7 +66,7 @@
       p {
         margin-right: 8px;
         font-size: 12px;
-        height: 38px;
+        height: 32px;
         overflow: hidden;
       }
     }
